--- a/index.html
+++ b/index.html
@@ -2,62 +2,81 @@
 <!-- Template by Quackit.com -->
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-<title>The Summer Slide</title>
+    <title>The Summer Slide</title>
 
-<!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
-<link href="css/custom.css" rel="stylesheet">
+    <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
+    <link href="css/custom.css" rel="stylesheet">
 
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
 
 <body>
 
-<!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-<div class="container">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span> 
+		      </button>
+		    </div>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbar">
 
-<!-- Navbar links -->
-<div class="collapse navbar-collapse" id="navbar">
-<ul class="nav navbar-nav">
-<li class="active">
-<a href="#">Home</a>
-</li>
+                <ul class="nav navbar-nav navbar-head" data-toggle="dropdown">
+                    <li class="active">
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
 
-<li class="dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Educational Links<span class="caret"></span></a>
-<ul class="dropdown-menu" aria-labelledby="about-us">
-<li><a href="http://www.pbskids.org/parents" target="_blank">Games and Videos</a></li>
-<li><a href="http://www.classicsforkids.com" target="_blank">Music</a></li>
-<li><a href="http://www.nationalgeographic.com" target="_blank">Natural Sciences</a></li>
-<li><a href="http://www.amightygirl.com" target="_blank">Girl Empowering Books and History</a></li>
-<li><a href="http://www.readingrockets.org/audience/parents" target="_blank">Reading</a></li>
-<li><a href="http://www.ixl.com" target="_blank">Math Practice</a></li>
-<li><a href="http://www.prodigygame.com" target="_blank">Math Games</a></li>
-<li><a href="http://www.scholastic.com/kids" target="_blank">Books</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Educational Links<span class="caret"></span></a>
+						<ul class="dropdown-menu" aria-labelledby="about-us">
+							<li><a href="http://www.pbskids.org/parents" target="_blank">Games and Videos</a></li>
+							<li><a href="http://www.classicsforkids.com" target="_blank">Music</a></li>
+							<li><a href="http://www.nationalgeographic.com" target="_blank">Natural Sciences</a></li>
+                            <li><a href="http://www.amightygirl.com" target="_blank">Girl Empowering Books and History</a></li>
+							<li><a href="http://www.readingrockets.org/audience/parents" target="_blank">Reading</a></li>
+							<li><a href="http://www.ixl.com" target="_blank">Math Practice</a></li>
+                            <li><a href="http://www.prodigygame.com" target="_blank">Math Games</a></li>
+							<li><a href="http://www.scholastic.com/kids" target="_blank">Books</a></li>
+							
+						</ul>
+					</li>
+                </ul>
 
-</ul>
-</li>
-</ul>
+				<!-- Search -->
+				<form class="navbar-form navbar-right" role="search">
+					<div class="form-group">
+						<input type="text" class="form-control">
+					</div>
+					<button type="submit" class="btn btn-default">Search</button>
+				</form>
 
-
-<!-- /.navbar-collapse -->
-</div>
-<!-- /.container -->
-</nav>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
 	<div class="jumbotron feature">
 		<div class="container">
